-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0b1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0b1
-------------------

10/21/14
    - Fixed a bug in savecase() where a gencost matrix with extra
      columns of zeros resulted in a corrupted MATPOWER case file.
    - Modified total_load() to return actual rather than nominal
      value for dispatchable loads by default, unless using the
      old-style string input for the 4th input arg. See
      'help total_load' for details.

10/16/14
    - Reactive power output of multiple generators at a PQ bus
      no longer get re-allocated when running a power flow.

10/11/14
    - Added 'fmincon_ip', 'linprog_ds' and 'optimoptions' to
      have_fcn() to test for availability of fmincon's interior
      point method (Optimization Toolbox 4.x +), linprog's
      dual simplex method (Optimization Toolbox 7.1 +), and
      optimoptions function for setting Optimization Toolbox
      options (Optimization Toolbox 6.3 +), respectively.
    - Added handling of NaN values to t_is().
    - INCOMPATIBLE CHANGE: Removed use of 'ot_opts' field and
      replaced with 'linprog_opts' and 'quadprog_opts' fields
      in the OPT argument to qps_matpower() and qps_ot().
    - Added optional 'linprog' and 'quadprog' fields to MATPOWER
      options struct, to allow setting of their options directly
      from mpoption(). Incremented MATPOWER options struct version
      to 2.
    - Added tests for multiple linprog() algorithms to t_opf_dc_ot().

10/10/14
    - Added 'sqp' algorithm option for fmincon.alg, not suitable
      for large problems.

10/7/14
    - Added toggle_softlims(), an extension to implement DC OPF
      branch flow soft limits. This should be useful in identifying