@@ -1,5 +1,5 @@
 function [baseMVA, bus, gen, branch, gencost, Au, lbu, ubu, ...
-        mpopt, N, fparm, H, Cw, z0, zl, zu, userfcn, areas] = ...
+        mpopt, N, fparm, H, Cw, z0, zl, zu, userfcn] = ...
     opf_args(baseMVA, bus, gen, branch, areas, gencost, Au, lbu, ubu, ...
         mpopt, N, fparm, H, Cw, z0, zl, zu)
 %OPF_ARGS  Parses and initializes OPF input arguments.
@@ -16,8 +16,6 @@ function [baseMVA, bus, gen, branch, gencost, Au, lbu, ubu, ...
 %       [mpc, mpopt] = opf_args( ... )
 %       [baseMVA, bus, gen, branch, gencost, A, l, u, mpopt, ...
 %           N, fparm, H, Cw, z0, zl, zu, userfcn] = opf_args( ... )
-%       [baseMVA, bus, gen, branch, gencost, A, l, u, mpopt, ...
-%           N, fparm, H, Cw, z0, zl, zu, userfcn, areas] = opf_args( ... )
 %
 %       Input arguments options:
 %
